# hover_authentication

./: CMakeLists.txt  README.md  hover_auth.sln
client_clr/: AssemblyInfo.cpp  client_clr.cpp  client_clr.hpp  client_clr.vcxproj  client_clr.vcxproj.filters
client_clr/argon2/: Argon2.hpp
client_clr/blake2/: Blake2b.hpp
client_clr/hv/: AsyncHttpClient.hpp  Buffer.hpp  HttpContext.hpp  HttpMessage.hpp  HttpParser.hpp  HttpServer.hpp  ThreadLocalStorage.hpp  UdpServer.hpp  WebSocketChannel.hpp  WebSocketClient.hpp  base64.hpp  hbase.hpp  hbuf.hpp  hdef.hpp  hendian.hpp  herr.hpp  hexport.hpp  hloop.hpp  hmain.hpp  hmap.hpp  hmutex.hpp  hobjectpool.hpp  hscope.hpp  hssl.hpp  hstring.hpp  hthreadpool.hpp  htime.hpp  http_client.hpp  hv.hpp  hversion.hpp  nlog.hpp  sha1.hpp  wsdef.hpp
client_clr/libs/: Argon2.lib
client_clr/openssl/: aes.hpp  asn1.hpp  asn1t.hpp  async.hpp  camellia.hpp  cast.hpp  cmp.hpp  cms.hpp  cmserr.hpp  conf_api.hpp  conferr.hpp  core_dispatch.hpp  crmf.hpp  crmferr.hpp  crypto.hpp  cryptoerr.hpp  ct.hpp  cterr.hpp  decoder.hpp  des.hpp  dh.hpp  dsa.hpp  dtls1.hpp  e_os2.hpp  ec.hpp  ecdh.hpp  ecerr.hpp  encodererr.hpp  (+41 more)
client_js/: hover-lib.js  package-lock.json  sample-login.html
client_sdk/: client.cpp  client.hpp  client_sdk.vcxproj  client_sdk.vcxproj.filters
server_webapp/: CMakeLists.txt  main.cpp
server_webapp/auth/: auth.cpp  include.hpp
server_webapp/database/: database.cpp  init.hpp
server_webapp/libs/argon2/: argon2.lib
server_webapp/libs/argon2/include/: argon2.h
server_webapp/scheduler/: include.hpp  scheduler.cpp
(+95 files in other folders)
